// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArchiveTeam archives a team 1`] = `
Object {
  "notification": Array [
    Object {
      "id": 0,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        9,
      ],
    },
    Object {
      "id": 1,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        10,
      ],
    },
    Object {
      "id": 2,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        11,
      ],
    },
    Object {
      "id": 3,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        12,
      ],
    },
    Object {
      "id": 4,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        13,
      ],
    },
    Object {
      "id": 5,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        14,
      ],
    },
    Object {
      "id": 6,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        15,
      ],
    },
    Object {
      "id": 7,
      "orgId": 8,
      "startAt": 2017-01-01T08:00:00.000Z,
      "teamName": "Team America",
      "type": "TEAM_ARCHIVED",
      "userIds": Array [
        16,
      ],
    },
  ],
  "team": Object {
    "activeFacilitator": null,
    "facilitatorPhase": "lobby",
    "facilitatorPhaseItem": null,
    "id": 17,
    "isArchived": true,
    "isPaid": true,
    "meetingId": null,
    "meetingPhase": "lobby",
    "meetingPhaseItem": null,
    "name": "Team America",
    "orgId": 8,
    "tier": "personal",
  },
}
`;

exports[`ArchiveTeam archives a team 2`] = `
Object {
  "newAuthToken": Array [
    Object {
      "channelId": 16,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 15,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 14,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 13,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 12,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 11,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 10,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
  ],
  "notificationsAdded": Array [
    Object {
      "channelId": 16,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 7,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                16,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 15,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 6,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                15,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 14,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 5,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                14,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 13,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 4,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                13,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 12,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 3,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                12,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 11,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 2,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                11,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 10,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 1,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                10,
              ],
            },
          ],
        },
      },
    },
    Object {
      "channelId": 9,
      "message": Object {
        "notificationsAdded": Object {
          "notifications": Array [
            Object {
              "id": 0,
              "orgId": 8,
              "startAt": 2017-01-01T08:00:00.000Z,
              "teamName": "Team America",
              "type": "TEAM_ARCHIVED",
              "userIds": Array [
                9,
              ],
            },
          ],
        },
      },
    },
  ],
}
`;

exports[`ArchiveTeam deletes a team when it has no projects or other team members 1`] = `
Object {
  "notification": Array [],
  "team": Object {},
  "teamMember": Array [],
  "user": Object {
    "cachedAt": 2017-01-01T07:00:00.000Z,
    "createdAt": 2017-01-01T07:00:00.000Z,
    "emailVerified": false,
    "id": 0,
    "identities": Array [],
    "inactive": false,
    "lastLogin": 2017-01-01T07:00:00.000Z,
    "lastSeenAt": 2017-01-01T07:00:00.000Z,
    "name": "Leader of One",
    "picture": "https://placeimg.com/100/100/animals",
    "preferredName": "Leader of One",
    "tms": Array [],
    "updatedAt": 2017-01-01T07:00:00.000Z,
    "userOrgs": Array [
      Object {
        "id": 1,
        "role": null,
      },
    ],
    "welcomeSentAt": 2017-01-01T07:00:00.000Z,
  },
}
`;

exports[`ArchiveTeam deletes a team when it has no projects or other team members 2`] = `
Object {
  "newAuthToken": Array [
    Object {
      "channelId": 0,
      "message": Object {
        "newAuthToken": "FAKEENCODEDJWT",
      },
    },
  ],
}
`;
